change size of title

--- a/_posts/2018-05-04-vcpkg.md
+++ b/_posts/2018-05-04-vcpkg.md
@@ -9,7 +9,7 @@ Pourquoi un fait aussi simple mérite-t-il un article ? Tout simplement parce qu
 
 [lien vers le code source](https://github.com/Microsoft/vcpkg)
 
-#### Un gestionnaire de librairie c'est quoi ?
+### Un gestionnaire de librairie c'est quoi ?
 
 Un gestionnaire de librairie et extension est un programme permettant d'installer directement des librairies  pour ce langage sans s'énerver, le programme s'occupe de tout.  Ils permettant aussi souvent de gérer les dépendances entre programmes et librairies.
 
@@ -48,7 +48,7 @@ Essayez de faire la même chose en C++, vous allez galerer à trouver une librai
 
 Même chose avec le nodejs en une ligne on obtient une librairie pour le faire, on a meme deux outils pour le faire npm et yarn (faut toujours 36 trucs differents pour faire la même chose en JavaScript :-) ).
 
-#### Avant vcpkg on faisait comment ?
+### Avant vcpkg on faisait comment ?
 
 Vu que le C/C++ est un langage bas niveau, très proche de la machine et du système, le seul gestionnaire de librairie facilement utilisable était le gestion de paquet du systeme lui-meme. 
 Si on voulait installer une librairie on l'installait comme une application.
@@ -63,7 +63,7 @@ Ca pose de nombreux problèmes, car on installe une librairie sur le système di
 
 Aussi sur Windows, bah on n'avait pas le choix fallait récupérer la librairie ailleurs, car on n'a pas d'equivalent à apt sur windows. C'est souvent de là que viennent les erreurs de type une .dll manquante, quand on lance une application sur windows, l'application a besoin de cette librairie mais elle n'est pas présente sur l'ordinateur. Ce genre de problème se règle assez facilement avec google, mais reste assez enervant.
 
-#### Et donc vcpkg ça apporte quoi ?
+### Et donc vcpkg ça apporte quoi ?
 
 vcpkg ou Visual C++ Packaging Tool est donc comme son nom l'indique un packaging tool pour le C++, encore en alpha/beta compatible Windows/Linux/MacOS. 
 
