--- a/_posts/2018-05-04-vcpkg.md
+++ b/_posts/2018-05-04-vcpkg.md
@@ -3,7 +3,7 @@ layout: post
 title: vcpkg enfin un gestionnaire de librairie C++ ?
 ---
 
-Microsoft vient de publier un gestionnaire de librairie pour le C++
+Microsoft vient de publier un gestionnaire de librairie pour le C++.
 
 Pourquoi un fait aussi simple mérite-t-il un article ? Tout simplement parce que en C++ d'avoir un outil pour gérer des librairies c'est juste du jamais vu.
 
