add delimiter for excerpt

--- a/_posts/2018-05-04-vcpkg.md
+++ b/_posts/2018-05-04-vcpkg.md
@@ -6,7 +6,7 @@ title: vcpkg enfin un gestionnaire de librairie C++ ?
 Microsoft vient de publier un gestionnaire de librairie pour le C++.
 
 Pourquoi un fait aussi simple mérite-t-il un article ? Tout simplement parce que en C++ d'avoir un outil pour gérer des librairies c'est juste du jamais vu.
-
+<!--end_excerpt-->
 [lien vers le code source](https://github.com/Microsoft/vcpkg)
 
 ## Un gestionnaire de librairie c'est quoi ?
